success_policies/disallow-hostpath.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-path
spec:
  validationFailureAction: audit
  background: false
  rules:
    - name: host-path
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: "HostPath volumes are forbidden.\nThe field spec.volumes[*].hostPath must be unset.\n"
        pattern:
          spec:
            =(volumes):
              - X(hostPath): "null"
